--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,30 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongoose": "^5.10.11",
-    "nodemon": "^2.0.6"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "mongoose": "^5.10.11",
+        "nodemon": "^2.0.6"
+    },
+    "devDependencies": {
+        "@types/body-parser": "^1.19.0",
+        "@types/cors": "^2.8.8",
+        "@types/express": "^4.17.8",
+        "@types/mongoose": "^5.7.36",
+        "@types/node": "^14.14.5",
+        "ts-node": "^9.0.0",
+        "typescript": "^4.0.5"
+    },
+    "scripts": {
+        "watch": "tsc -w",
+        "dev": "nodemon dist/index.js",
+        "start": "node dist/index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC"
 }
